--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -10,9 +10,9 @@
         android:title="@string/refresh" />
 
     <item
-        android:id="@+id/settings"
+        android:id="@+id/contact"
         android:icon="@drawable/ic_more_vert_white_24dp"
         app:showAsAction="never"
-        android:title="@string/settings"/>
+        android:title="@string/contact" />
 
 </menu>
