El menu item solo se abre desde fragment, elimado menu item de main activity

--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -7,12 +7,22 @@
         android:id="@+id/refresh"
         android:icon="@drawable/ic_refresh_white_24dp"
         app:showAsAction="ifRoom|collapseActionView"
+        android:orderInCategory="2"
         android:title="@string/refresh" />
+    <item
+        android:id="@+id/search"
+        android:icon="@drawable/ic_search_white_24dp"
+        app:showAsAction="always"
+        android:title="@string/search"
+        android:orderInCategory="1"
+        app:actionViewClass="android.support.v7.widget.SearchView" />
 
     <item
         android:id="@+id/contact"
         android:icon="@drawable/ic_more_vert_white_24dp"
         app:showAsAction="never"
+        android:orderInCategory="3"
         android:title="@string/contact" />
+
 
 </menu>
