--- a/app/src/main/res/layout/quake_cardview.xml
+++ b/app/src/main/res/layout/quake_cardview.xml
@@ -32,45 +32,43 @@
 
         <TextView
             android:id="@+id/tv_ciudad"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:fontFamily="@font/roboto"
             android:maxLines="1"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"
             android:textSize="14sp"
-            android:fontFamily="@font/roboto"
-            card_view:layout_constraintBottom_toTopOf="@+id/tv_referencia"
-            card_view:layout_constraintEnd_toStartOf="@+id/tv_hora"
             card_view:layout_constraintStart_toEndOf="@id/iv_mag_color"
             card_view:layout_constraintTop_toTopOf="@+id/iv_mag_color"
-            tools:text="Nombre Ciudad"/>
+            tools:text="Nombre Ciudad" />
 
         <TextView
             android:id="@+id/tv_hora"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="14dp"
-            card_view:layout_constraintBottom_toBottomOf="@+id/tv_ciudad"
+            android:layout_marginEnd="16dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
+            card_view:layout_constraintBottom_toBottomOf="@+id/tv_ciudad"
             card_view:layout_constraintEnd_toEndOf="parent"
             card_view:layout_constraintTop_toTopOf="@+id/tv_ciudad"
-            tools:text="XX D X h"/>
+            tools:text="XX D X h" />
 
         <TextView
             android:id="@+id/tv_referencia"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
+            android:fontFamily="@font/roboto"
+            android:maxLines="1"
             android:paddingTop="0dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:textSize="14sp"
-            android:fontFamily="@font/roboto"
-            android:maxLines="1"
             card_view:layout_constraintBottom_toBottomOf="@+id/iv_mag_color"
             card_view:layout_constraintEnd_toEndOf="parent"
             card_view:layout_constraintStart_toStartOf="@+id/tv_ciudad"
             card_view:layout_constraintTop_toBottomOf="@+id/tv_ciudad"
-            tools:text="XX km al NO de Ciudad"/>
+            tools:text="Referencia de la ciudad" />
 
 
         <TextView
@@ -87,6 +85,21 @@
             card_view:layout_constraintStart_toStartOf="@+id/iv_mag_color"
             card_view:layout_constraintTop_toTopOf="@+id/iv_mag_color"
             tools:text="9.5"/>
+
+        <ImageView
+            android:id="@+id/iv_sensible"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginEnd="8dp"
+            card_view:layout_constraintBottom_toBottomOf="@+id/tv_ciudad"
+            card_view:layout_constraintEnd_toStartOf="@+id/tv_hora"
+            card_view:layout_constraintHorizontal_bias="0.0"
+            card_view:layout_constraintStart_toEndOf="@+id/tv_ciudad"
+            card_view:layout_constraintTop_toTopOf="@+id/tv_ciudad"
+            card_view:srcCompat="@drawable/ic_warning_black_24dp"
+            android:visibility="invisible"
+            android:contentDescription="@string/icono_sensible" />
 
     </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
