Soporte de idioma ingles y cambios an algunos layouts

--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -73,7 +73,6 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:fontFamily="@font/roboto"
         android:text="@string/contact_email"
         android:textAppearance="@style/TextAppearance.AppCompat.Headline"
         android:textSize="14sp"
@@ -95,7 +94,6 @@
         android:id="@+id/tv_title_email_contact"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/roboto"
         android:text="@string/contact_title_email"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
         android:textSize="14sp"
@@ -143,9 +141,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:fontFamily="@font/roboto"
+        android:fontFamily="sans-serif"
         android:text="@string/contact_nombre"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+        android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@+id/iv_user_contact"
         app:layout_constraintTop_toTopOf="@+id/iv_user_contact" />
 
@@ -153,7 +152,6 @@
         android:id="@+id/tv_title_nombre_contact"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/roboto"
         android:text="@string/contact_title_name"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
         app:layout_constraintEnd_toEndOf="@+id/tv_name_contact"
