--- a/app/src/main/res/layout/fragment_quake.xml
+++ b/app/src/main/res/layout/fragment_quake.xml
@@ -49,26 +49,26 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
-                android:fontFamily="@font/roboto"
                 android:alpha="0.87"
+                android:fontFamily="sans-serif"
+                android:text="@string/last_quakes_info_card_view_tittle"
                 android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:text="@string/last_quakes_info_card_view_tittle" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/tv_info_description"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:fontFamily="@font/roboto"
+                android:fontFamily="sans-serif"
+                android:text="@string/last_quakes_info_card_view_description"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="@+id/tv_info_titulo"
                 app:layout_constraintStart_toStartOf="@+id/tv_info_titulo"
-                app:layout_constraintTop_toBottomOf="@+id/tv_info_titulo"
-                android:text="@string/last_quakes_info_card_view_description" />
+                app:layout_constraintTop_toBottomOf="@+id/tv_info_titulo" />
 
             <Button
                 android:id="@+id/btn_info_accept"
