Se agrega server error connection e invitaciones y links dinamicos con firebase

--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -24,5 +24,11 @@
         android:orderInCategory="3"
         android:title="@string/contact" />
 
+    <item
+        android:id="@+id/invite"
+        android:icon="@drawable/ic_date"
+        app:showAsAction="never"
+        android:orderInCategory="4"
+        android:title="Invitar amigos" />
 
 </menu>
