--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,10 +11,12 @@
 
 
     <!-- Colores para cada magnitud-->
-    <color name="magnitude3">#F6BF65</color>
-    <color name="magnitude4">#efa053</color>
-    <color name="magnitude5">#E88241</color>
-    <color name="magnitude6">#E1632F</color>
-    <color name="magnitude7">#DA451D</color>
+    <color name="magnitude1">#F6BF65</color>
+    <color name="magnitude2">#F1A958</color>
+    <color name="magnitude3">#EC934B</color>
+    <color name="magnitude4">#E77D3E</color>
+    <color name="magnitude5">#E26832</color>
+    <color name="magnitude6">#DD5225</color>
+    <color name="magnitude7">#D83C18</color>
     <color name="magnitude8">#D4270C</color>
 </resources>
