--- a/app/src/main/res/anim/anim_pulse.xml
+++ b/app/src/main/res/anim/anim_pulse.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<scale xmlns:android="http://schemas.android.com/apk/res/android"
-    android:interpolator="@android:anim/decelerate_interpolator"
-    android:fromXScale="1"
-    android:fromYScale="1"
-    android:pivotX="50%"
-    android:pivotY="50%"
-    android:toXScale="0.8"
-    android:toYScale="0.8"
-    android:duration="600"
-    android:repeatCount="infinite"
-    android:repeatMode="reverse" />
+<set xmlns:android="http://schemas.android.com/apk/res/android">
+    <scale
+        android:interpolator="@android:anim/decelerate_interpolator"
+        android:fromXScale="1"
+        android:fromYScale="1"
+        android:pivotX="50%"
+        android:pivotY="50%"
+        android:toXScale="0.8"
+        android:toYScale="0.8"
+        android:duration="750"
+        android:repeatCount="infinite"
+        android:repeatMode="reverse" />
+</set>
+
+
