--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,7 @@
         app:layout_constraintTop_toBottomOf="@+id/include"
         tools:layout="@layout/fragment_quake" />
 
+    <!-- Boton disponible para debug de activity invitacion-->
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
@@ -35,6 +36,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:text="Notification"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
