Correccion de string de invitaciones

--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -29,6 +29,6 @@
         android:icon="@drawable/ic_date"
         app:showAsAction="never"
         android:orderInCategory="4"
-        android:title="Invitar amigos" />
+        android:title="@string/invite" />
 
 </menu>
