--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -2,7 +2,8 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <!-- AppBar -->
     <android.support.constraint.Guideline
@@ -37,10 +38,10 @@
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <ImageView
-                android:id="@+id/toolbar_image"
+                android:id="@+id/toolbar_image_contact"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/foto"
+                tools:background="@drawable/foto"
                 android:contentDescription="@string/imagen_toolbar"
                 android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax"
