--- a/app/src/main/res/layout/activity_quake_details.xml
+++ b/app/src/main/res/layout/activity_quake_details.xml
@@ -134,10 +134,10 @@
                 android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                 android:textSize="14sp"
                 android:transitionName="ciudad"
-                app:layout_constraintVertical_chainStyle="packed"
-                tools:text="Nombre Ciudad"
                 app:layout_constraintStart_toEndOf="@id/iv_mag_color_detail"
-                app:layout_constraintTop_toTopOf="@+id/iv_mag_color_detail" />
+                app:layout_constraintTop_toTopOf="@+id/iv_mag_color_detail"
+                app:layout_constraintVertical_chainStyle="packed"
+                tools:text="Nombre Ciudad" />
 
             <ImageView
                 android:id="@+id/iv_sensible_detail"
@@ -197,11 +197,11 @@
                 android:textSize="18sp"
                 android:textStyle="normal"
                 android:transitionName="magnitud"
-                tools:text="9.5"
                 app:layout_constraintBottom_toBottomOf="@+id/iv_mag_color_detail"
                 app:layout_constraintEnd_toEndOf="@+id/iv_mag_color_detail"
                 app:layout_constraintStart_toStartOf="@+id/iv_mag_color_detail"
-                app:layout_constraintTop_toTopOf="@+id/iv_mag_color_detail" />
+                app:layout_constraintTop_toTopOf="@+id/iv_mag_color_detail"
+                tools:text="9.5" />
 
             <ImageView
                 android:id="@+id/iv_reloj"
@@ -275,10 +275,11 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/barrier"
+                app:layout_constraintVertical_bias="0.0"
                 app:srcCompat="@drawable/ic_near_24dp" />
 
             <TextView
-                android:id="@+id/tv_titulo_distancia"
+                android:id="@+id/tv_titulo_gms"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -291,20 +292,22 @@
                 app:layout_constraintTop_toTopOf="@+id/iv_pin" />
 
             <TextView
-                android:id="@+id/tv_distancia"
+                android:id="@+id/tv_gms"
                 android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
                 android:fontFamily="sans-serif"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small"
                 android:textSize="14sp"
                 android:visibility="visible"
-                app:layout_constraintBottom_toBottomOf="@+id/iv_pin"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/guia_vertical"
                 app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@+id/tv_titulo_distancia"
-                app:layout_constraintTop_toBottomOf="@+id/tv_titulo_distancia"
-                tools:text="453 Km de aqui" />
+                app:layout_constraintStart_toStartOf="@+id/tv_titulo_gms"
+                app:layout_constraintTop_toBottomOf="@+id/tv_titulo_gms"
+                app:layout_constraintVertical_bias="0.0"
+                tools:text="28° 28' 33'' S \n72° 83' 72'' W" />
 
             <android.support.constraint.Guideline
                 android:id="@+id/guia_vertical"
@@ -365,6 +368,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/guia_vertical"
                 app:layout_constraintTop_toTopOf="@+id/barrier"
+                app:layout_constraintVertical_bias="0.0"
                 card_view:srcCompat="@drawable/ic_show_chart_black_24dp" />
 
             <TextView
@@ -392,6 +396,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/tv_titulo_escala"
                 app:layout_constraintTop_toBottomOf="@+id/tv_titulo_escala"
+                app:layout_constraintVertical_bias="0.0"
                 tools:text="Nombre Escala" />
 
         </android.support.constraint.ConstraintLayout>
